# glu

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  coverage.sh  demo.glu  demo_errors.glu  docker.sh  example_arithmetic.glu  hello.glu  install_lsp.sh  pizza.glu  sonar-project.properties  test_all_arithmetic.glu  test_arithmetic.glu  test_divide.glu  test_final_arithmetic.glu  test_float_add.glu  test_float_explicit.glu  test_float_return.glu  test_improved_errors.glu  test_lsp.py  test_multiply.glu  test_sample.glu  test_simple.glu  test_simple_add.glu  test_subtract.glu
lib/AST/: AST.cpp  ASTChildModifierVisitor.cpp  ASTChildReplacerVisitor.cpp  ASTNode.cpp  Attributes.cpp  CMakeLists.txt  HashType.cpp
lib/AST/Types/: EnumTy.cpp  StructTy.cpp  TypeBase.cpp
lib/ClangImporter/: CMakeLists.txt  ClangImporter.cpp  DeclImporter.cpp  DeclImporter.hpp  ImportAction.hpp  ImporterContext.cpp  ImporterContext.hpp  TypeConverter.cpp  TypeConverter.hpp
lib/GIL/: BasicBlock.cpp  CMakeLists.txt  CallInst.cpp  Function.cpp  GIL.cpp  GILModules.cpp  GILPrinter.cpp  InstBase.cpp  Module.cpp
lib/GILGen/: CMakeLists.txt  Context.cpp  Context.hpp  GILGen.cpp  GILGenExpr.cpp  GILGenExpr.hpp  GILGenExprs.hpp  GILGenFunction.cpp  GILGenLValue.cpp  GILGenLValue.hpp  GILGenModule.cpp  GILGenStmt.cpp  GILPasses.cpp  Intrinsics.hpp  LiteralVisitor.hpp  PassManager.cpp  PassManagerOptions.cpp  Scope.hpp  TypeTranslator.cpp  TypeTranslator.hpp
lib/GILGen/GILPasses/: DeadCodeElimination.hpp  DeadCodeEliminationPass.cpp  DropLowering.hpp  DropLoweringPass.cpp  GILDetectUninitializedPass.hpp  UnreachableInstChecker.cpp  UnreachableInstChecker.hpp  VoidMainPass.cpp  VoidMainPass.hpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Scanner.l
lib/Optimizer/: CMakeLists.txt  GILPasses.cpp  Optimizer.cpp  PassManager.cpp  PassManagerOptions.cpp
lib/Optimizer/Analysis/: ValueUseChecker.cpp
lib/Optimizer/AnalysisPasses/: ValueUseChecker.cpp
lib/Optimizer/EarlyPasses/: DeadCodeEliminationPass.cpp  DetectUninitializedPass.cpp  SROAPass.cpp  ValueUseChecker.cpp  VoidMainPass.cpp
lib/Optimizer/GILPasses/: CopyLoweringPass.cpp  DeadCodeEliminationPass.cpp  DetectUninitializedPass.cpp  DropLowering.hpp  DropLoweringPass.cpp  EraseCopyOnStructExtractPass.cpp  UnreachableInstChecker.cpp  VoidMainPass.cpp  VoidMainPass.hpp
lib/Optimizer/LatePasses/: CopyLoweringPass.cpp  DropLoweringPass.cpp
lib/Optimizer/SimplificationPasses/: SimplifyCopyToDropPass.cpp  SimplifyStructCopyPass.cpp
lib/Optimizer/TransformationPasses/: CopyLoweringPass.cpp  DropLoweringPass.cpp  EraseCopyOnStructExtractPass.cpp  UnreachableInstChecker.cpp
lib/Parser/: BisonTokens.cpp  CMakeLists.txt  Parser.cpp  Parser.yy  README.md
lib/Sema/: AutoImport.cpp  BuiltinOperators.hpp  CMakeLists.txt  CSWalker.cpp  Constraint.cpp  ConstraintGen.cpp  ConstraintPrinter.cpp  ConstraintSystem.cpp  Constraints.cpp  ConversionVisitor.cpp  ConversionVisitor.hpp  GlobalCSWalker.cpp  GlobalScopeVisitor.cpp  ImmutableAssignmentWalker.hpp  ImportHandler.cpp  ImportHandler.hpp  ImportManager.cpp  InitializerWalker.hpp  LocalCSWalker.cpp  ModuleWalker.cpp  OccursCheckVisitor.cpp  Resolver.cpp  ReturnLastChecker.hpp  ScopeTable.cpp  Solver.cpp  SubstitutionMapper.cpp  TypeVariableTyMapper.cpp  UnificationVisitor.cpp  UnreferencedVarDeclWalker.cpp  UnreferencedVarDeclWalker.hpp  UnresolvedNameTyMapper.hpp
lib/Sema/ConstraintGen/: GlobalCSWalker.cpp  LocalCSWalker.cpp
lib/Sema/ConstraintSystem/: CSSimplify.cpp  ConcreteTypeVisitor.cpp  Constraint.cpp  ConstraintPrinter.cpp  ConstraintSystem.cpp  ConversionVisitor.cpp  LocalCSWalker.cpp  Solver.cpp  SubstitutionMapper.cpp  TypeVariableCollector.cpp  TypeVariableTyMapper.cpp  UnificationVisitor.cpp
lib/Sema/SemanticPass/: DuplicateFunctionChecker.hpp  DuplicateFunctionNoManglingChecker.hpp  EnumValueResolver.hpp  ImmutableAssignmentWalker.hpp  ImplementImportChecker.cpp  ImplementImportChecker.hpp  ImplementImportWrapper.cpp  ImplementImportWrapper.hpp  InitializerWalker.hpp  InvalidOperatorArgsChecker.hpp  ReturnLastChecker.hpp  UnreachableWalker.hpp  UnreferencedVarDeclWalker.hpp  ValidAttributeChecker.hpp  ValidCopyOverloadChecker.hpp  ValidDropOverloadChecker.hpp  ValidLiteralChecker.hpp  ValidMainChecker.hpp  ValidTypeChecker.hpp
test/: CMakeLists.txt  TypeVisitor.cpp  test_ASTNode.cpp
test/AST/: ASTChildModifierVisitor.cpp  ASTChildReplacerVisitor.cpp  ASTContext.cpp  ASTNode.cpp  ASTPrinter.cpp  ASTWalker.cpp  FunctionDecl.cpp  LetDecl.cpp  TypedASTWalker.cpp
test/AST/ASTPrinter/: ASTDeclPrinter.cpp  ASTExprPrinter.cpp  ASTPrinter.cpp  ASTPrinter.hpp  ASTStmtPrinter.cpp
test/AST/Decl/: FunctionDecl.cpp  ImportDecl.cpp  LetDecl.cpp  VarDecl.cpp
test/AST/Stmt/: BreakStmt.cpp  CompoundStmt.cpp  ContinueStmt.cpp  ExpressionStmt.cpp  ReturnStmt.cpp  WhileStmt.cpp
test/AST/Types/: TypeVisitor.cpp
test/Basic/: DiagnosticTest.cpp
test/GIL/: GILPrinter.cpp  MemberDenseMapSupport.cpp  ValueRAUW.cpp
test/GILGen/: GILGenStmt.cpp  GILGenTernary.cpp
test/IRDec/: DITypeLifterTest.cpp  ExternFuncDetector.cpp  FuncProtoDetector.cpp  ModuleLifterTest.cpp  TypeLifter.cpp
test/IRGen/: IRGenTests.cpp
test/Optimizer/: ValueUseCheckerTest.cpp
test/Parser/: Common.hpp  Errors.cpp  Expression.cpp  Function.cpp  Import.cpp  Parser.cpp  Statement.cpp  Types.cpp
test/Scanner/: Scanner.cpp
test/Sema/: AdvancedConstraintTest.cpp  ConstraintSystemIntegration.cpp  ConstraintSystemTest.cpp  ConversionConstraintTest.cpp  ErrorMessagesTest.cpp
test/functional/: CMakeLists.txt  ftests.sh  lit.cfg  lit.cfg.in
test/functional/ASTPrinter/: enum.glu  expected.result  func.glu  import.glu  import_aliases.glu  import_aliases_error.glu  namespace.glu  namespace_types.glu  struct.glu  templates.glu  ticked_id.glu  unicode_test.glu
test/functional/GILPrinter/: copy_overload_gil.glu  erase_copy_on_struct_extract.glu  (+6 more)
test/sema/: ConstraintSystem.cpp
tools/glu-demangle/: CMakeLists.txt  Cargo.toml
tools/gluc/: CMakeLists.txt
(+560 files in other folders)
